--- a/css/style.css
+++ b/css/style.css
@@ -21,14 +21,13 @@ img {
 
   .container {
     width: 100%;
-    max-width: 1500px;
     justify-content: space-between;
     align-items: center;
   }
 
   :root {
     --header-color: #0084FD;
-    --hero-box-color: #B5DDFF;
+    --box-color: #B5DDFF;
     --main-color: #9792E4;
     --free-color: #FDC15F;
     --footer-color: #333333;
@@ -49,21 +48,24 @@ img {
     line-height: 70px;
   }
 
+  .header-menu {
+    display: none;
+  }
+
   .header-menu ul {
     display: flex;
     gap: 15px;
     list-style-type: none;
     color: white;
     padding-right: 20px;
-    display: none;
   }
 
   .header-logo {
-    padding-left: 20px;
+    padding-left: 40px;
   }
 
   .hamburger-menu {
-    padding-right: 20px;
+    padding-right: 40px;
   }
 
   .hamburger-menu-btn {
@@ -72,6 +74,63 @@ img {
     font-size: 1.7rem;
     color: white;
   }
+
+  @media screen and (min-width: 992px) {
+
+    .header-menu {
+      display: block;
+    }
+
+    .hamburger-menu {
+      display: none;
+    }
+
+    .colums {
+      padding: 50px 0;
+    }
+  }
   /* /HEADER */
 
+  /* MAIN */
+  /* 5 cards section */
   
+  .colums {
+    padding: 50px 40px;
+  }
+
+  .col {
+    background-color: var(--box-color);
+    border-radius: 10px;
+    margin-bottom: 20px;
+    /* debug */
+    height: 500px;
+  }
+ /* media query 5 cards section */
+  @media screen and (min-width: 768px) {
+    .container {
+      width: 90%;
+      justify-content: space-between;
+      margin: 0 auto;
+    }
+     .colums {
+        display: flex;
+        justify-content: center;
+        flex-wrap: wrap;
+        gap: 20px;
+     }
+
+     #card-section .col {
+        width: 30%;
+     }
+
+     #card-section .col:nth-child(1) {
+      width: calc(60% + 20px)
+     }
+     
+     .colums {
+      padding: 50px 0;
+    }
+  }
+  /* /media quert 5 cards section */
+  /* /5 card section */
+  /* /MAIN */
