--- a/css/style.css
+++ b/css/style.css
@@ -234,6 +234,12 @@ img {
   width: calc(100% / 2 - 40px)
 }
 }
+
+@media screen and (min-width: 992px) {
+  #benefits-section .col {
+    width: calc(100% / 3 - 40px);
+  }
+}
   /* /media query benefits section */
   /* /benefits section */
   /* /MAIN */
