--- a/css/style.css
+++ b/css/style.css
@@ -78,6 +78,12 @@ img {
   color: white;
 }
 
+.get-started {
+  color: black;
+  background-color: white;
+  border-radius: 20px;
+  padding: 10px;
+}
 /* media query header */
 @media screen and (min-width: 768px) {
   .header-logo {
