--- a/css/style.css
+++ b/css/style.css
@@ -132,9 +132,6 @@ img {
   /* height: 500px; */
 }
 
-#card-section .col:nth-child(1) {
-  flex-direction: column;
-}
 #card-section h3 {
   color: var(--header-color);
   font-size: 1.5rem;
@@ -210,6 +207,13 @@ img {
     justify-content: left;
   }
 
+  #card-section h3 {
+    text-align: left;
+  }
+
+  #card-section a {
+    margin: 10px;
+  }
 }
 
 @media screen and (min-width: 992px) {
@@ -218,6 +222,15 @@ img {
   }
 }
 
+@media screen and (min-width: 992px) {
+  #card-section .col:nth-child(1) {
+    display: flex;
+  }
+  
+  #card-section img {
+    transform: translateY(56%);
+  }
+}
 /* /media quert 5 cards section */
 
 /* /5 card section */
