feat: strategic section completed with responsive

--- a/css/style.css
+++ b/css/style.css
@@ -128,8 +128,6 @@ img {
   background-color: var(--box-color);
   border-radius: 10px;
   margin-bottom: 20px;
-  /* debug */
-  /* height: 500px; */
 }
 
 #card-section h3 {
@@ -214,11 +212,20 @@ img {
   #card-section a {
     margin: 10px;
   }
+
+  #card-section img {
+    width: 50%;
+  }
+
 }
 
 @media screen and (min-width: 992px) {
   #card-section .container {
     width: 70%;
+  }
+
+  #card-section img {
+    width: 100%;
   }
 }
 
@@ -227,9 +234,13 @@ img {
     display: flex;
   }
   
-  #card-section img {
-    transform: translateY(56%);
+  .phone-img {
+    display: flex;
+    align-items: end;
   }
+  /* #card-section img {
+    transform: translateY(56%);
+  } */
 }
 /* /media quert 5 cards section */
 
@@ -247,9 +258,6 @@ main .planning {
 
 .item {
   width: 90%;
-  background-color: #BCB5EE;
-  /* debug */
-  height: 650px;
   margin: 40px auto;
 }
 
@@ -258,12 +266,62 @@ main .planning {
   border-radius: 30px;
 }
 
+#strategic-section h2 {
+  text-align: center;
+  color: white;
+  font-size: 1.5rem;
+  padding: 20px;
+}
+
+#strategic-section p {
+  padding: 20px;
+  color: white;
+}
+
+#strategic-section .developement p {
+  color: black;
+  font-style: italic;
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+#strategic-section h3 {
+  text-align: center;
+  padding-top: 20px;
+}
+
+.arrow {
+  height: 50px;
+  width: 50px;
+  background-color: var(--main-color);
+  padding: 20px;
+  border-radius: 50%; 
+}
+
+#strategic-section .developement .flex {
+  justify-content: center;
+  padding-bottom: 30px;
+}
 /* media query strategic section */
 @media screen and (min-width: 992px) {
   .planning .container {
-    width: 60%;
+    width: 65%;
     display: flex;
     gap: 20px;
+    align-items: flex-end;
+  }
+
+  .item {
+    margin: 0;
+  }
+
+  #strategic-section h2 {
+    padding: 70px 30px;
+  }
+
+  #strategic-section p {
+    line-height: 30px;
+    padding-bottom: 30px;
   }
 }
 
