--- a/css/style.css
+++ b/css/style.css
@@ -126,7 +126,7 @@ img {
 
 .col {
   background-color: var(--box-color);
-  border-radius: 10px;
+  border-radius: 40px;
   margin-bottom: 20px;
 }
 
@@ -338,25 +338,87 @@ main .planning {
 
 #testimonials-section .colums .partners {
   background-color: white;
-  /* debug */
-  border: 1px solid black;
 }
 
+#testimonials-section .partners h3 {
+  text-align: center;
+}
+
+#testimonials-section .partners h2 {
+  color: var(--main-color);
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 15px;
+}
+
+#testimonials-section .partners p {
+  text-align: center;
+  line-height: 30px;
+}
 #testimonials-section .col {
   background-color: var(--main-color);
-  /* debug */
-  height: 500px;
 }
 
+#testimonials-section .col img {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+  object-fit: cover;
+  margin: 0 auto;
+}
+
+#testimonials-section .col .testimonials-img{
+  padding-top: 20px;
+}
+
+#testimonials-section .col:nth-child(2) p {
+  color: white;
+  text-align: center;
+  padding: 20px 20px;
+  line-height: 30px;
+}
+
+#testimonials-section .col:nth-child(3) p {
+  color: white;
+  text-align: center;
+  padding: 20px 20px;
+  line-height: 30px;
+}
+
+#testimonials-section .col:nth-child(4) p {
+  color: white;
+  text-align: center;
+  padding: 20px 20px;
+  line-height: 30px;
+}
+
+#testimonials-section .name {
+  font-weight: bold;
+}
 /* media query testimonials section */
 @media screen and (min-width: 768px) {
   #testimonials-section .colums {
     display: block;
   }
 
-  #testimonials-section .col {
-    height: 200px;
+  #testimonials-section .col:nth-child(2){
+    display: flex;
   }
+
+  #testimonials-section .col:nth-child(3) {
+    display: flex;
+  }
+
+  #testimonials-section .col:nth-child(4) {
+    display: flex;
+  }
+
+  #testimonials-section .testimonials-img {
+    width: 100%;
+    padding-bottom: 20px;
+  }
+
+  #testimonials-section 
 }
 
 @media screen and (min-width: 992px) {
