fix: text decoration h3 testiomonials section

--- a/css/style.css
+++ b/css/style.css
@@ -342,6 +342,7 @@ main .planning {
 
 #testimonials-section .partners h3 {
   text-align: center;
+  font-weight: lighter;
 }
 
 #testimonials-section .partners h2 {
