--- a/css/style.css
+++ b/css/style.css
@@ -534,6 +534,7 @@ main .planning {
 
 #about-section .about-img {
   position: relative;
+  max-width: 250px;
 }
 
 #about-section .col img {
@@ -548,7 +549,7 @@ main .planning {
   color: var(--main-color);
   position: absolute;
   top: 10px;
-  right: 150px;
+  right: 50px;
 }
 
 #about-section a {
